--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lime-ui",
+  "name": "fan-ui",
   "version": "1.0.0",
   "description": "another light weight vue.js component library",
   "main": "lib/lime-ui.min.js",
